# memoriant-patent-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: patent-drafter.md  patent-illustrator.md  patent-reviewer.md  prior-art-searcher.md
api/: deps.py  main.py
api/middleware/: auth.py  correlation.py  rate_limit.py
api/routes/: analyze.py  config.py  draft.py  examiner.py  health.py  pipeline.py  search.py
api/schemas/: errors.py  requests.py  responses.py
core/: pipeline.py
core/analysis/: base.py  claims.py  eligibility.py  examiner_stats.py  formalities.py  novelty.py  obviousness.py  prior_art.py  quality_score.py  specification.py
core/drafting/: __init__.py  base.py  nonprovisional.py  pct.py  provisional.py
core/embedding/: base.py  chunker.py  ollama_embed.py  openai_embed.py
core/export/: docx_export.py  pdf_export.py
core/llm/: base.py  claude.py  openai_compat.py  registry.py
core/models/: application.py  config.py  patent.py
core/search/: aggregator.py  base.py  patentsview.py  registry.py  semantic_scholar.py  serpapi.py  uspto_odp.py
core/secrets/: base.py  encrypted.py
core/storage/: base.py  qdrant.py  registry.py  sqlite.py  supabase_pg.py
db/: init.sql
docs/: DOCKER_SECRETS.md  LICENSING.md  TLS_INTERNAL.md
scripts/: backup.sh  restore.sh
skills/patent-config/: skill.md
skills/patent-diagrams/: skill.md
skills/patent-draft/: skill.md
tests/: conftest.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json
(+83 files in other folders)
