[project]
name = "memoriant-patent-core"
version = "0.1.0"
description = "Full-pipeline patent platform: idea to filing-ready draft"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Nathan Maine"}]
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "cryptography>=43.0",
    "structlog>=24.0",
    "python-docx>=1.0",
    "weasyprint>=60.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
